seedboxk8s/applications/tortuga/NetworkPolicy.allow-intra-lidarr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-lidarr
  namespace: tortuga
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    ports:
    - port: 8686
      protocol: TCP
