seedboxk8s/applications/tortuga/NetworkPolicy.allow-intra-nzbhydra2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-nzbhydra2
  namespace: tortuga
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nzbhydra2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: lidarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: shhh
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: lazylibrarian
    ports:
    - port: 5076
      protocol: TCP
