seedboxk8s/applications/tortuga/NetworkPolicy.allow-intra-radarr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-radarr
  namespace: tortuga
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    ports:
    - port: 7878
      protocol: TCP
