seedboxk8s/applications/tortuga/NetworkPolicy.allow-intra-transmission.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-transmission
  namespace: tortuga
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: transmission
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: lidarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: shhh
    ports:
    - port: 9091
      protocol: TCP
